--- a/workerAdv/package.json
+++ b/workerAdv/package.json
@@ -2,6 +2,7 @@
   "name": "workeradv",
   "version": "0.0.0",
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20241004.0",
     "jest": "^29.7.0",
     "wrangler": "3.78.7"
   },
